--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyProfile</title>
+  <title>Tanay Ghosh</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
